[gd_scene load_steps=12 format=2]

[ext_resource path="res://unit/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://unit/player/FootmanUnit.gd" type="Script" id=2]
[ext_resource path="res://common/DamageArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://unit/player/InteractArea.gd" type="Script" id=4]
[ext_resource path="res://unit/player/WeaponSystem.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.9, 0.25 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.5, 1.8, 0.5 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="CylinderShape" id=6]

[node name="FootmanUnit" groups=[
"Player",
] instance=ExtResource( 1 )]
collision_layer = 258
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." index="1"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="DestructibleArea" parent="." index="3" instance=ExtResource( 3 )]
hp = 10000.0

[node name="CollisionShape" type="CollisionShape" parent="DestructibleArea" index="1"]
shape = SubResource( 1 )

[node name="InteractArea" type="Area" parent="." index="4"]
editor/display_folded = true
collision_layer = 0
collision_mask = 128
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="InteractArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8 )
shape = SubResource( 6 )

[node name="SpellElements" type="Spatial" parent="." index="5"]

[node name="AlchemyElements" type="Spatial" parent="." index="6"]

[node name="Weapons" type="Spatial" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )

[node name="WeaponSystem" parent="." index="8" instance=ExtResource( 5 )]
[connection signal="die" from="DestructibleArea" to="." method="_on_DestructibleArea_die"]
[connection signal="area_entered" from="InteractArea" to="InteractArea" method="_on_InteractArea_area_entered"]
[connection signal="area_exited" from="InteractArea" to="InteractArea" method="_on_InteractArea_area_exited"]
